chore: finish presentation

--- a/presentacion/presentacion.tex
+++ b/presentacion/presentacion.tex
@@ -923,7 +923,7 @@ Director: Rodolfo Guillermo Pereyra}
     \item El algoritmo procesa $O(n/300)$ ventanas, donde $n$ es el número total de puntos
     \item Cada ventana tiene tamaño $V = 800$ puntos, pero solo nos interesan 400 de ellos
     \item Se marcan como mínimo 4 puntos por búsqueda $\Rightarrow$ cota superior de $400/4 = 100$ búsquedas por ventana
-    \item Cada búsqueda tiene complejidad $O(V)$
+    \item Cada búsqueda tiene complejidad $O(400)$
   \end{itemize}
   
   \vspace{0.5cm}
